[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 


[project]
name = "WriteTheDocs"
version = "1.0.0" 
description = "Document a python library."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
keywords = ["documentation", "docs", "format", "linting"]
authors = [{ name = "L. A. Rossi", email = "laura.a.rossi.r@gmail.com" }]
maintainers = [{ name = "L. A. Rossi", email = "laura.a.rossi.r@gmail.com" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation, clean code development.",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "black==25.1.0",
    "flake8==7.2.0",
    "sphinx==8.2.3",
    "pyflowchart",
    "coloredlogs==15.0.1",
    "ansi2html==1.9.2"
]


# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]
write_the_docs = "write_the_docs:app"
